GL/Projet_GL/src/test/deca/context/valid/sansObjet/expr/expr_parentheses.deca
// Test : expr_parentheses
// But : tester les parenthèses dans une expression.
// Couvre : parenthèses, ordre d’évaluation.
// Résultat attendu : compilation sans erreur.

{
    int a;
    a = (1 + 2) * 3;
}